Add basic theming and styles

--- a/frontend/.storybook/preview-head.html
+++ b/frontend/.storybook/preview-head.html
@@ -2,3 +2,7 @@
   rel="stylesheet"
   href="https://fonts.googleapis.com/icon?family=Material+Icons"
 />
+<link
+  href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap"
+  rel="stylesheet"
+/>
